--- a/lec5/.env
+++ b/lec5/.env
@@ -1,2 +1,3 @@
 PORT=8001
 MONGODB_URI=mongodb+srv://anurag23:anurag23@cluster0.0gdtwn3.mongodb.net/todoapp?retryWrites=true&w=majority
+JWT_SECRET_KEY=acciojob-node
