--- a/lec6/.env
+++ b/lec6/.env
@@ -1,2 +1,3 @@
 MONGODB_URI=mongodb+srv://anurag23:anurag23@cluster0.0gdtwn3.mongodb.net/signupapp?retryWrites=true&w=majority
 PORT=8001
+JWT_SECRET_KEY=acciojob-node
