--- a/blogging-app/backend/.env
+++ b/blogging-app/backend/.env
@@ -1,2 +1,4 @@
 PORT=8001
 MONGODB_URI=mongodb+srv://anurag23:anurag23@cluster0.0gdtwn3.mongodb.net/blogapp?retryWrites=true&w=majority
+BCRYPT_SALTS=12
+JWT_SECRET=accio-sept
